# 0x40hues

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  ConfigureChecks.cmake  README.md  colors.txt
CMakeModules/: FindMad.cmake
glew/: CMakeLists.txt
pugixml/: CMakeLists.txt
respacks/Default/: images.xml  info.xml  songs.new.xml  songs.xml
src/: CMakeLists.txt  audio_decoder.cpp  audio_decoder.hpp  audio_renderer.hpp  audio_renderer_win32.cpp  common.h  common.hpp  filesystem.hpp  hues_logic.cpp  hues_logic.hpp  main.cpp  respack.cpp  respack.h  respack.hpp  video_renderer.cpp  video_renderer.h  video_renderer.hpp
